--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -65,9 +65,7 @@ jobs:
       run: |
         # 假设构建输出到dist目录
         cd dist
-        mkdir -p "v${{ env.VERSION }}"
-        cp -r * "v${{ env.VERSION }}/"
-        mkdir -p "v${{ env.VERSION }}/" && find . -mindepth 1 -maxdepth 1 -not -name "v${{ env.VERSION }}/" -exec cp -r {} v${{ env.VERSION }}/ \;
+        mkdir -p v${{ env.VERSION }}/ && find . -mindepth 1 -maxdepth 1 -not -name "v${{ env.VERSION }}" -exec cp -r {} v${{ env.VERSION }}/ \;
         cd ..
       
     
