--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -73,7 +73,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist # 构建输出目录
-          publish_branch: v${{ env.VERSION }}
+          publish_branch: gh-pages
 
       # 步骤7: 等待CDN缓存更新
       - name: Wait for CDN propagation
